[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbdix"
version = "1.0.0"
description = "Fast BDIX network connectivity tester with parallel ping"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "bdix",
    "bangladesh",
    "internet",
    "connectivity",
    "ping",
    "network",
    "ftp",
    "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
dependencies = ["icmplib>=3.0.0", "rich>=13.0.0", "aiohttp>=3.9.0"]
authors = [{ name = "Rahatul Ghazi" }]
maintainers = [{ name = "Rahatul Ghazi" }]

[project.urls]
Homepage = "https://github.com/rahaaatul/cbdix"
Repository = "https://github.com/rahaaatul/cbdix.git"
Issues = "https://github.com/rahaaatul/cbdix/issues"
Changelog = "https://github.com/rahaaatul/cbdix/blob/main/CHANGELOG.md"

[project.scripts]
bdix = "src.main:sync_main"
cbdix = "src.main:sync_main"

[dependency-groups]
dev = [
    "pyrefly",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.pyrefly]
python_version = "3.14"
search_path = ["src", ".venv/Lib/site-packages"]
